--- a/70/css/styles.css
+++ b/70/css/styles.css
@@ -240,6 +240,22 @@ h6 {
   background: #d9efff;
   padding: 1em; }
 
+.image-text-combo__content {
+  text-align: left; }
+
+.image-text-combo__title {
+  color: #2699fb;
+  font-size: 2rem;
+  line-height: 1.1; }
+
+.image-text-combo__image {
+  height: auto;
+  min-width: 368px;
+  width: 100%; }
+  @media only screen and (min-width: 600px) {
+    .image-text-combo__image {
+      min-width: 0; } }
+
 .info-block {
   text-align: left; }
 
@@ -252,84 +268,143 @@ h6 {
   grid-template-columns: repeat(12, [col] 1fr);
   grid-template-rows: repeat(6, [row] auto);
   grid-column-gap: 1em;
-  grid-row-gap: 2em; }
+  grid-row-gap: 2.5em; }
+
+.grid-wrapper div {
+  grid-column: col 1 / span 12; }
 
 .grid-block-demo {
   background: #ddd;
   color: #000;
   text-align: center; }
 
-.grid-equal-2 div:nth-child(1) {
-  grid-column: col 1 / span 6;
-  grid-row: row 1; }
-
-.grid-equal-2 div:nth-child(2) {
-  grid-column: col 7 / span 6;
-  grid-row: row 1; }
-
-.grid-equal-2 div:nth-child(3) {
-  grid-column: col 1 / span 6;
-  grid-row: row 2; }
-
-.grid-equal-2 div:nth-child(4) {
-  grid-column: col 7 / span 6;
-  grid-row: row 2; }
-
-.grid-equal-3 div:nth-child(1) {
-  grid-column: col 1 / span 4;
-  grid-row: row 1; }
-
-.grid-equal-3 div:nth-child(2) {
-  grid-column: col 5 / span 4;
-  grid-row: row 1; }
-
-.grid-equal-3 div:nth-child(3) {
-  grid-column: col 9 / span 4;
-  grid-row: row 1; }
-
-.grid-equal-3 div:nth-child(4) {
-  grid-column: col 1 / span 4;
-  grid-row: row 2; }
-
-.grid-equal-3 div:nth-child(5) {
-  grid-column: col 5 / span 4;
-  grid-row: row 2; }
-
-.grid-equal-3 div:nth-child(6) {
-  grid-column: col 9 / span 4;
-  grid-row: row 2; }
-
-.grid-equal-4 div:nth-child(1) {
-  grid-column: col 1 / span 3;
-  grid-row: row 1; }
-
-.grid-equal-4 div:nth-child(2) {
-  grid-column: col 4 / span 3;
-  grid-row: row 1; }
-
-.grid-equal-4 div:nth-child(3) {
-  grid-column: col 7 / span 3;
-  grid-row: row 1; }
-
-.grid-equal-4 div:nth-child(4) {
-  grid-column: col 10 / span 3;
-  grid-row: row 1; }
-
-.grid-equal-4 div:nth-child(5) {
-  grid-column: col 1 / span 3;
-  grid-row: row 2; }
-
-.grid-equal-4 div:nth-child(6) {
-  grid-column: col 4 / span 3;
-  grid-row: row 2; }
-
-.grid-equal-4 div:nth-child(7) {
-  grid-column: col 7 / span 3;
-  grid-row: row 2; }
-
-.grid-equal-4 div:nth-child(8) {
-  grid-column: col 10 / span 3;
-  grid-row: row 2; }
+@media only screen and (min-width: 600px) {
+  .grid-equal-2 div:nth-child(1) {
+    grid-column: col 1 / span 6;
+    grid-row: row 1; }
+  .grid-equal-2 div:nth-child(2) {
+    grid-column: col 7 / span 6;
+    grid-row: row 1; }
+  .grid-equal-2 div:nth-child(3) {
+    grid-column: col 1 / span 6;
+    grid-row: row 2; }
+  .grid-equal-2 div:nth-child(4) {
+    grid-column: col 7 / span 6;
+    grid-row: row 2; }
+  .grid-equal-3 div:nth-child(1) {
+    grid-column: col 1 / span 4;
+    grid-row: row 1; }
+  .grid-equal-3 div:nth-child(2) {
+    grid-column: col 5 / span 4;
+    grid-row: row 1; }
+  .grid-equal-3 div:nth-child(3) {
+    grid-column: col 9 / span 4;
+    grid-row: row 1; }
+  .grid-equal-3 div:nth-child(4) {
+    grid-column: col 1 / span 4;
+    grid-row: row 2; }
+  .grid-equal-3 div:nth-child(5) {
+    grid-column: col 5 / span 4;
+    grid-row: row 2; }
+  .grid-equal-3 div:nth-child(6) {
+    grid-column: col 9 / span 4;
+    grid-row: row 2; }
+  .grid-equal-4 div:nth-child(1) {
+    grid-column: col 1 / span 3;
+    grid-row: row 1; }
+  .grid-equal-4 div:nth-child(2) {
+    grid-column: col 4 / span 3;
+    grid-row: row 1; }
+  .grid-equal-4 div:nth-child(3) {
+    grid-column: col 7 / span 3;
+    grid-row: row 1; }
+  .grid-equal-4 div:nth-child(4) {
+    grid-column: col 10 / span 3;
+    grid-row: row 1; }
+  .grid-equal-4 div:nth-child(5) {
+    grid-column: col 1 / span 3;
+    grid-row: row 2; }
+  .grid-equal-4 div:nth-child(6) {
+    grid-column: col 4 / span 3;
+    grid-row: row 2; }
+  .grid-equal-4 div:nth-child(7) {
+    grid-column: col 7 / span 3;
+    grid-row: row 2; }
+  .grid-equal-4 div:nth-child(8) {
+    grid-column: col 10 / span 3;
+    grid-row: row 2; }
+  .grid-custom--repeat-media-left div:nth-child(1) {
+    grid-column: col 2 / span 4;
+    grid-row: row 1; }
+  .grid-custom--repeat-media-left div:nth-child(2) {
+    grid-column: col 6 / span 6;
+    grid-row: row 1; }
+  .grid-custom--repeat-media-left div:nth-child(3) {
+    grid-column: col 2 / span 4;
+    grid-row: row 2; }
+  .grid-custom--repeat-media-left div:nth-child(4) {
+    grid-column: col 6 / span 6;
+    grid-row: row 2; }
+  .grid-custom--repeat-media-left div:nth-child(5) {
+    grid-column: col 2 / span 4;
+    grid-row: row 3; }
+  .grid-custom--repeat-media-left div:nth-child(6) {
+    grid-column: col 6 / span 6;
+    grid-row: row 3; }
+  .grid-custom--repeat-media-left div:nth-child(7) {
+    grid-column: col 2 / span 4;
+    grid-row: row 4; }
+  .grid-custom--repeat-media-left div:nth-child(8) {
+    grid-column: col 6 / span 6;
+    grid-row: row 4; }
+  .grid-custom--repeat-media-right div:nth-child(1) {
+    grid-column: col 8 / span 4;
+    grid-row: row 1; }
+  .grid-custom--repeat-media-right div:nth-child(2) {
+    grid-column: col 2 / span 6;
+    grid-row: row 1; }
+  .grid-custom--repeat-media-right div:nth-child(3) {
+    grid-column: col 8 / span 4;
+    grid-row: row 2; }
+  .grid-custom--repeat-media-right div:nth-child(4) {
+    grid-column: col 2 / span 6;
+    grid-row: row 2; }
+  .grid-custom--repeat-media-right div:nth-child(5) {
+    grid-column: col 8 / span 4;
+    grid-row: row 3; }
+  .grid-custom--repeat-media-right div:nth-child(6) {
+    grid-column: col 2 / span 6;
+    grid-row: row 3; }
+  .grid-custom--repeat-media-right div:nth-child(7) {
+    grid-column: col 8 / span 4;
+    grid-row: row 4; }
+  .grid-custom--repeat-media-right div:nth-child(8) {
+    grid-column: col 2 / span 6;
+    grid-row: row 4; }
+  .grid-custom--repeat-media-alternate div:nth-child(1) {
+    grid-column: col 2 / span 4;
+    grid-row: row 1; }
+  .grid-custom--repeat-media-alternate div:nth-child(2) {
+    grid-column: col 6 / span 6;
+    grid-row: row 1; }
+  .grid-custom--repeat-media-alternate div:nth-child(3) {
+    grid-column: col 8 / span 4;
+    grid-row: row 2; }
+  .grid-custom--repeat-media-alternate div:nth-child(4) {
+    grid-column: col 2 / span 6;
+    grid-row: row 2; }
+  .grid-custom--repeat-media-alternate div:nth-child(5) {
+    grid-column: col 2 / span 4;
+    grid-row: row 3; }
+  .grid-custom--repeat-media-alternate div:nth-child(6) {
+    grid-column: col 6 / span 6;
+    grid-row: row 3; }
+  .grid-custom--repeat-media-alternate div:nth-child(7) {
+    grid-column: col 8 / span 4;
+    grid-row: row 4; }
+  .grid-custom--repeat-media-alternate div:nth-child(8) {
+    grid-column: col 2 / span 6;
+    grid-row: row 4; } }
 
 .l-section {
   margin-bottom: 1.75rem; }
