--- a/70/source/_patterns/03-organisms/grid/_grid.scss
+++ b/70/source/_patterns/03-organisms/grid/_grid.scss
@@ -1,11 +1,15 @@
 // @file
 
 .grid-wrapper {
-	display: grid;
-	grid-template-columns: repeat(12, [col] 1fr );
-	grid-template-rows: repeat(6, [row] auto) ;
-	grid-column-gap: 1em;
-	grid-row-gap: 2em;
+  display: grid;
+  grid-template-columns: repeat(12, [col] 1fr );
+  grid-template-rows: repeat(6, [row] auto) ;
+  grid-column-gap: 1em;
+  grid-row-gap: 2.5em;
+}
+
+.grid-wrapper div {
+  grid-column: col 1 / span 12;
 }
 
 .grid-block-demo {
@@ -14,104 +18,238 @@
   text-align: center;
 }
 
-.grid-equal-2 {
+@media only screen and (min-width: 600px) {
 
-  div:nth-child(1) {
-    grid-column: col 1 / span 6;
-    grid-row: row 1;
+  // Equal Grids
+  .grid-equal-2 {
+
+    div:nth-child(1) {
+      grid-column: col 1 / span 6;
+      grid-row: row 1;
+    }
+
+    div:nth-child(2) {
+      grid-column: col 7 / span 6;
+      grid-row: row 1;
+    }
+
+    // Row #2
+    div:nth-child(3) {
+      grid-column: col 1 / span 6;
+      grid-row: row 2;
+    }
+
+    div:nth-child(4) {
+      grid-column: col 7 / span 6;
+      grid-row: row 2;
+    }
   }
 
-  div:nth-child(2) {
-    grid-column: col 7 / span 6;
-    grid-row: row 1;
+  .grid-equal-3 {
+
+    div:nth-child(1) {
+      grid-column: col 1 / span 4;
+      grid-row: row 1;
+    }
+
+    div:nth-child(2) {
+      grid-column: col 5 / span 4;
+      grid-row: row 1;
+    }
+
+    div:nth-child(3) {
+      grid-column: col 9 / span 4;
+      grid-row: row 1;
+    }
+
+    // Row #2
+    div:nth-child(4) {
+      grid-column: col 1 / span 4;
+      grid-row: row 2;
+    }
+
+    div:nth-child(5) {
+      grid-column: col 5 / span 4;
+      grid-row: row 2;
+    }
+
+    div:nth-child(6) {
+      grid-column: col 9 / span 4;
+      grid-row: row 2;
+    }
   }
 
-  // Row #2
-  div:nth-child(3) {
-    grid-column: col 1 / span 6;
-    grid-row: row 2;
+  .grid-equal-4 {
+
+    div:nth-child(1) {
+      grid-column: col 1 / span 3;
+      grid-row: row 1;
+    }
+
+    div:nth-child(2) {
+      grid-column: col 4 / span 3;
+      grid-row: row 1;
+    }
+
+    div:nth-child(3) {
+      grid-column: col 7 / span 3;
+      grid-row: row 1;
+    }
+
+    div:nth-child(4) {
+      grid-column: col 10 / span 3;
+      grid-row: row 1;
+    }
+
+    // Row #2
+    div:nth-child(5) {
+      grid-column: col 1 / span 3;
+      grid-row: row 2;
+    }
+
+    div:nth-child(6) {
+      grid-column: col 4 / span 3;
+      grid-row: row 2;
+    }
+
+    div:nth-child(7) {
+      grid-column: col 7 / span 3;
+      grid-row: row 2;
+    }
+
+    div:nth-child(8) {
+      grid-column: col 10 / span 3;
+      grid-row: row 2;
+    }
   }
 
-  div:nth-child(4) {
-    grid-column: col 7 / span 6;
-    grid-row: row 2;
-  }
-}
+  // Custom Grids
+  .grid-custom--repeat-media-left {
 
-.grid-equal-3 {
+    div:nth-child(1) {
+      grid-column: col 2 / span 4;
+      grid-row: row 1;
+    }
 
-  div:nth-child(1) {
-    grid-column: col 1 / span 4;
-    grid-row: row 1;
-  }
+    div:nth-child(2) {
+      grid-column: col 6 / span 6;
+      grid-row: row 1;
+    }
 
-  div:nth-child(2) {
-    grid-column: col 5 / span 4;
-    grid-row: row 1;
-  }
+    div:nth-child(3) {
+      grid-column: col 2 / span 4;
+      grid-row: row 2;
+    }
 
-  div:nth-child(3) {
-    grid-column: col 9 / span 4;
-    grid-row: row 1;
-  }
+    div:nth-child(4) {
+      grid-column: col 6 / span 6;
+      grid-row: row 2;
+    }
 
-  // Row #2
-  div:nth-child(4) {
-    grid-column: col 1 / span 4;
-    grid-row: row 2;
-  }
+    div:nth-child(5) {
+      grid-column: col 2 / span 4;
+      grid-row: row 3;
+    }
 
-  div:nth-child(5) {
-    grid-column: col 5 / span 4;
-    grid-row: row 2;
-  }
+    div:nth-child(6) {
+      grid-column: col 6 / span 6;
+      grid-row: row 3;
+    }
 
-  div:nth-child(6) {
-    grid-column: col 9 / span 4;
-    grid-row: row 2;
-  }
-}
+    div:nth-child(7) {
+      grid-column: col 2 / span 4;
+      grid-row: row 4;
+    }
 
-.grid-equal-4 {
-
-  div:nth-child(1) {
-    grid-column: col 1 / span 3;
-    grid-row: row 1;
+    div:nth-child(8) {
+      grid-column: col 6 / span 6;
+      grid-row: row 4;
+    }
   }
 
-  div:nth-child(2) {
-    grid-column: col 4 / span 3;
-    grid-row: row 1;
+  .grid-custom--repeat-media-right {
+
+    div:nth-child(1) {
+      grid-column: col 8 / span 4;
+      grid-row: row 1;
+    }
+
+    div:nth-child(2) {
+      grid-column: col 2 / span 6;
+      grid-row: row 1;
+    }
+
+    div:nth-child(3) {
+      grid-column: col 8 / span 4;
+      grid-row: row 2;
+    }
+
+    div:nth-child(4) {
+      grid-column: col 2 / span 6;
+      grid-row: row 2;
+    }
+
+    div:nth-child(5) {
+      grid-column: col 8 / span 4;
+      grid-row: row 3;
+    }
+
+    div:nth-child(6) {
+      grid-column: col 2 / span 6;
+      grid-row: row 3;
+    }
+
+    div:nth-child(7) {
+      grid-column: col 8 / span 4;
+      grid-row: row 4;
+    }
+
+    div:nth-child(8) {
+      grid-column: col 2 / span 6;
+      grid-row: row 4;
+    }
   }
 
-  div:nth-child(3) {
-    grid-column: col 7 / span 3;
-    grid-row: row 1;
-  }
+  .grid-custom--repeat-media-alternate {
 
-  div:nth-child(4) {
-    grid-column: col 10 / span 3;
-    grid-row: row 1;
-  }
+    div:nth-child(1) {
+      grid-column: col 2 / span 4;
+      grid-row: row 1;
+    }
 
-  // Row #2
-  div:nth-child(5) {
-    grid-column: col 1 / span 3;
-    grid-row: row 2;
-  }
+    div:nth-child(2) {
+      grid-column: col 6 / span 6;
+      grid-row: row 1;
+    }
 
-  div:nth-child(6) {
-    grid-column: col 4 / span 3;
-    grid-row: row 2;
-  }
+    div:nth-child(3) {
+      grid-column: col 8 / span 4;
+      grid-row: row 2;
+    }
 
-  div:nth-child(7) {
-    grid-column: col 7 / span 3;
-    grid-row: row 2;
-  }
+    div:nth-child(4) {
+      grid-column: col 2 / span 6;
+      grid-row: row 2;
+    }
 
-  div:nth-child(8) {
-    grid-column: col 10 / span 3;
-    grid-row: row 2;
+    div:nth-child(5) {
+      grid-column: col 2 / span 4;
+      grid-row: row 3;
+    }
+
+    div:nth-child(6) {
+      grid-column: col 6 / span 6;
+      grid-row: row 3;
+    }
+
+    div:nth-child(7) {
+      grid-column: col 8 / span 4;
+      grid-row: row 4;
+    }
+
+    div:nth-child(8) {
+      grid-column: col 2 / span 6;
+      grid-row: row 4;
+    }
   }
 }
