--- a/drupal/carousel/sass/3.components/_carousel.scss
+++ b/drupal/carousel/sass/3.components/_carousel.scss
@@ -2,7 +2,7 @@
 // Component: carousel
 
 .carousel {
-  @include layout-breakout();
+  // @include layout-breakout();
   background-image: url();
   background-color: transparent;
   background-position: center center;
@@ -51,7 +51,7 @@
     margin: 0 0 1.5rem;
     padding: 0;
 
-    @media (max-width: $bp-small) {
+    @media (max-width: $width--s) {
       font-size: 1.5rem;
     }
   }
@@ -65,7 +65,7 @@
     vertical-align: middle;
     display: inline-block;
 
-    @media (max-width: 900px) {
+    @media (max-width: $width--m) {
       display: none;
     }
   }
@@ -78,13 +78,12 @@
     margin: 0 0 0 1rem;
   }
 
-
   .carousel__link {
     margin-top: 1rem;
   }
 
   .carousel__link > a {
-    @include button-arrow-light;
+    // @include button-arrow-light;
   }
 
   .carousel__slides {
@@ -93,7 +92,7 @@
   }
 
   button {
-    @include button-clean();
+    // @include button-clean();
   }
 
   svg {
@@ -137,7 +136,6 @@
     transform: rotate(-180deg);
   }
 
-
   .carousel-control__pagination-icon {
     display: block;
     height: 12px;
@@ -159,7 +157,6 @@
       }
     }
   }
-
 
   .carousel-item--is-active .carousel-control__pagination-icon svg {
     fill: $white;
