--- a/drupal/cta/sass/3.components/_paragraph--cta-section.scss
+++ b/drupal/cta/sass/3.components/_paragraph--cta-section.scss
@@ -1,13 +1,13 @@
 .paragraph.paragraph--type--internal-cta-section {
-  @include lazyloadBase;
+  // @include lazyloadBase;
   margin-top: 3rem;
 
   &.in-view {
-    @include lazyloaded;
+    // @include lazyloaded;
   }
 
   h3 {
-    @include responsive-font(3em, .83, 4rem, 1);
+    // @include responsive-font(3em, .83, 4rem, 1);
   }
 }
 
@@ -34,7 +34,7 @@
   padding: 0 2.5em;
   padding-top: 9.5%;
   padding-bottom: 5.25%;
-  border: 1px solid rgba($color--midgray, .75);
+  border: 1px solid rgba($gray, .75);
   border-left-width: 0;
 
   @media screen and (max-width: 1100px) {
@@ -43,7 +43,7 @@
   }
 
   p {
-    color: $color--darkgray;
+    color: $gray;
   }
 
   .field--name-field-single-cta {
