--- a/drupal/accordion/templates/paragraphs/paragraph--accordion-item.html.twig
+++ b/drupal/accordion/templates/paragraphs/paragraph--accordion-item.html.twig
@@ -55,9 +55,8 @@
   <div{{ attributes.addClass(classes) }}>
     {% block content %}
 
-      {{ content.field_section_title }}
       <div class="accordion__title accordion__trigger--toggle-accordion">
-        {{ content.field_title }}
+        {{ content.repeat_title }}
 
         <button class="accordion__toggle accordion__trigger--toggle-accordion">
           <span class="accordion__toggle-label visually-hidden">expand and show content</span>
@@ -69,9 +68,8 @@
       </div>
 
       <div class="accordion__content">
-        {{ content.field_content }}
+        {{ content.repeat_content }}
       </div>
-
 
     {% endblock %}
   </div>
