--- a/drupal/accordion/sass/3.components/_accordion.scss
+++ b/drupal/accordion/sass/3.components/_accordion.scss
@@ -1,50 +1,46 @@
-// example component using:
-//
-// templates/paragraphs/paragraph--accordion.html.twig
-//
-// and
-//
-// js/components/accordion.js
-//
-// Presumes the existence of an Accordion paragraph type
-// with field_title and field_content.
-//
-
-.l-page main.l-content .paragraph.paragraph--type--accordion {
-  // @include container-reading;
-
-  > .field--name-field-title {
-    color: $blue;
-    font-weight: bold;
-    font-size: 1.25rem;
-  }
+.paragraph--type--accordion {
+  max-width: 768px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .paragraph--type--accordion-item {
-  background-color: $gray;
-  border-radius: 4px;
-
   &.accordion--collapsed {
-    box-shadow: $box-shadow;
-    background-color: $white;
+    background-color: #fff;
   }
+}
+
+.field--name-repeat-section-title {
+  font-weight: bold;
+  font-size: 32px;
+  margin-bottom: 24px;
+}
+
+.field--name-repeat-accordion-items {
+  border-bottom: 1px solid #7fc4fd;
 }
 
 .accordion {
   .accordion__title {
+    background-color: #d9efff;
+    border: 1px solid #7fc4fd;
+    border-bottom: none;
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
     flex-wrap: nowrap;
     cursor: pointer;
-    margin-top: 1rem;
-    margin-bottom: 0.5rem;
     padding: 0.5rem 1rem 0.5rem 2rem;
     user-select: none;
     font-size: 1.25rem;
     font-weight: bold;
-    border-radius: 4px;
+  }
+
+  .field--name-repeat-title {
+    color: #2699fb;
+    font-size: 16px;
+    font-weight: bold;
   }
 
   .accordion__toggle {
@@ -64,7 +60,7 @@
     .accordion__toggle-icon-horizontal,
     .accordion__toggle-icon-vertical {
       position: absolute;
-      background-color: $blue;
+      background-color: #2699fb;
       transition: background-color 0.2s linear;
     }
 
@@ -87,6 +83,8 @@
 
   .accordion__content {
     display: none;
+    border-left: 1px solid #7fc4fd;
+    border-right: 1px solid #7fc4fd;
     padding: 0.5rem 2rem;
     overflow: hidden;
   }
@@ -94,7 +92,7 @@
   &.accordion--collapsed .accordion__toggle {
     .accordion__toggle-icon-horizontal,
     .accordion__toggle-icon-vertical {
-      background-color: $blue;
+      background-color: #2699fb;
     }
 
     .accordion__toggle-icon {
